cmake_minimum_required(VERSION 3.24)
project(ClassWork)

set(CMAKE_CXX_STANDARD 11)

add_subdirectory(ClassOne)
add_subdirectory(ClassTwo)
add_subdirectory(ClassThree)
add_subdirectory(ClassFour)
add_subdirectory(ClassFive)
add_subdirectory(ClassSix)
add_subdirectory(ClassSeven)
add_subdirectory(CourseDesign)
add_subdirectory(Calculator)