cmake_minimum_required(VERSION 3.24)
project(ChapterTwo)

set(CMAKE_CXX_STANDARD 17)

add_executable(Chapter2.1 Chapter_2_1_Function.cpp)
add_executable(Test2.1 Chapter_2_1_Test.cpp)
add_executable(Chapter2.2 Chapter_2_2_VectorSort.cpp)
add_executable(Test2.2 Test_2_2.cpp)
add_executable(Test2.4 test2_4.cpp)